# requirements

./: README.md  pyproject.toml
requirements/: convert.py
script/: project_helper.py
scripts/: project_helper.py
src/: convert.py
test/: pyproject.toml  requirements.txt  test_convert.py
tests/: pyproject.toml  test_convert.py
